apps/calibre-web/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: config
          persistentVolumeClaim:
            claimName: config
      containers:
        - name: app
          image: lscr.io/linuxserver/calibre-web:latest@sha256:7c0464228f2fdcf543b46e5327f36114596b097db6af0297c26b0452ed15f17c
          envFrom: []
          volumeMounts:
            - name: nas-media
              mountPath: /eBooks
              subPath: eBooks
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: 128M
            limits:
              memory: 256M
          ports:
            - name: http
              containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [calibre-web]
